overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,15 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
+}
+
+html, body {
+  overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 h1 {
@@ -55,6 +64,10 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+img, table {
+  max-width: 100%;
 }
 
 @media (prefers-color-scheme: light) {
